--- a/sass/navigation/_navigation.scss
+++ b/sass/navigation/_navigation.scss
@@ -4,6 +4,16 @@
 @import "links";
 
 /*--------------------------------------------------------------
+## Buttons
+--------------------------------------------------------------*/
+@import "buttons";
+
+/*--------------------------------------------------------------
+## Scrollbar
+--------------------------------------------------------------*/
+@import "scrollbar";
+
+/*--------------------------------------------------------------
 ## Menus
 --------------------------------------------------------------*/
 @import "menus";
