--- a/sass/site/_site.scss
+++ b/sass/site/_site.scss
@@ -6,6 +6,16 @@
 @import "primary/posts-and-pages";
 
 /*--------------------------------------------------------------
+## Homepage
+--------------------------------------------------------------*/
+@import "primary/homepage";
+
+/*--------------------------------------------------------------
+## Masthead 
+--------------------------------------------------------------*/
+@import "primary/masthead";
+
+/*--------------------------------------------------------------
 ## Comments
 --------------------------------------------------------------*/
 @import "primary/comments";
