--- a/sass/typography/_headings.scss
+++ b/sass/typography/_headings.scss
@@ -1,3 +1,16 @@
 h1, h2, h3, h4, h5, h6 {
 	clear: both;
+	font-family: $font__heading;
+}
+
+h1 {
+	font-size: 3.5em;
+	
+	&.site-title {
+		font-size: 1.5em;
+	}
+}
+
+h2 {
+	font-size: 2em;
 }
